<resources>

    <string name="app_name">CodeHub</string>
    <string name="app_version">0.4 (Beta)</string>

    <!-- Login screen -->
    <string name="sign_in_to_github">Sign in to GitHub</string>
    <string name="hint_user_name">Username</string>
    <string name="hint_password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="login_failure">Username or password is incorrect</string>
    <string name="login_oauth">Login with OAuth</string>
    <string name="continue_no_login">Continue without logging in</string>

    <!-- Navigation drawer -->
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign out</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <!-- Toolbars & menus -->
    <string name="search_github">Search GitHub</string>
    <string name="sign_out_confirmation">Sign out of your GitHub account?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="version">Version</string>

    <!-- Fragment tab titles -->
    <string name="users">Users</string>
    <string name="overview">Overview</string>
    <string name="repositories">Repositories</string>
    <string name="starred">Starred</string>
    <string name="gists">Gists</string>
    <string name="pulse">Pulse</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="readme">Readme</string>
    <string name="code">Code</string>
    <string name="issues">Issues</string>
    <string name="pull_requests">Pull requests</string>
    <string name="commits">Commits</string>
    <string name="branches">Branches</string>
    <string name="releases">Releases</string>
    <string name="contributors">Contributors</string>
    <string name="license">License</string>
    <string name="files">Files</string>
    <string name="comments">Comments</string>

    <!-- No results text -->
    <string name="no_results">No results</string>
    <string name="no_repos">No repositories</string>
    <string name="none_starred">No starred repositories</string>
    <string name="no_gists">No gists</string>
    <string name="no_pulse">Nothing here</string>
    <string name="no_followers">No followers</string>
    <string name="none_following">None following</string>
    <string name="no_readme">No readme file</string>
    <string name="no_issues">No issues</string>
    <string name="no_pull_requests">No pull requests</string>
    <string name="no_commits">No commits</string>
    <string name="no_releases">No releases</string>
    <string name="no_contributors">No contributors</string>
    <string name="no_license">No license</string>
    <string name="no_files">No files</string>

    <!-- Downloads -->
    <string name="zip_download">.zip</string>
    <string name="tar_download">tar.gz</string>
    <string name="no_comments">No comments</string>

</resources>
